app/assets/stylesheets/revised/pages/landing/_packages.scss
$compare-packages-table-border: rgb(178, 178, 178);
$compare-packages-blue: rgb(19, 71, 106);

// I think contact-us-callout is going to go on other pages, but scope to just this page for now
.signup-landing-page-packages {
  // Also has styles in the large-screen section
  .contact-us-callout-wrapper {
    position: relative;
    width: 100%;
    padding-top: 2 * $vertical-height;
    @extend .clearfix;
    .contact-us-callout {
      background: $compare-packages-blue;
      padding: $vertical-height 2 * $vertical-height;
      margin: 0;
      color: #fff;
      text-align: center;
      .btn {
        margin-left: 0.5rem;
      }
    }
  }
}

// Mike is inconsistent
.signup-landing-page-packages {
  .btn {
    text-transform: none;
    border-radius: 4px;
  }
}

.signup-landing-page-packages {
  .banner-header {
    h1,
    h2 {
      text-align: center;
      display: block;
      width: 100%;
      text-shadow: 1px 1px 10px rgba(51, 51, 51, 0.7);
    }
    // We have different breakpoints on this than the other landing pages, so apply this here
    @include media-breakpoint-down(md) {
      padding-top: 72px;
      padding-bottom: 144px;
    }
  }
  .packages-price-list,
  .compare-packages-table {
    display: none;
  }
  .main-compare-packages-container {
    margin-top: 36px;
  }
  table.compare-packages-table {
    td {
      vertical-align: middle;
      text-align: center;
    }
    tr td:first-child {
      text-align: left;
    }
    .feature-boolean {
      font-family: Courier;
      font-weight: bold;
      text-align: center;
      font-size: 30px;
      color: $gray-light;
      .included-feature {
        color: $blue-dark;
      }
    }
  }
}

.packages-price-list-small-screens {
  list-style-type: none;
  padding: 0;
  margin: 0;
  & > li {
    display: block;
    text-align: center;
    border: 1px solid #979797;
    margin: $vertical-height 0;
    padding: $vertical-height;
    h4,
    h3,
    p {
      margin: 0;
    }
  }
  h5 {
    color: $gray-light;
    font-style: italic;
  }
  h4 {
    text-transform: none;
    margin: 0;
    font-size: 17px;
  }
  .btn-primary,
  .btn {
    margin-top: 2 * $vertical-height;
  }
  h3 {
    color: $compare-packages-blue;
    font-size: 50px;
    text-align: center;
    line-height: 1;
    margin: 0;
    span {
      font-size: 75%;
    }
  }
  p {
    font-style: italic;
    opacity: 0.9;
    margin: $vertical-height 0;
    line-height: 1.5;
  }
  .plan-features ul {
    list-style-type: disc;
    text-align: left;
  }
  .showPlanFeatures {
    text-decoration: none;
    span {
      margin: 6px 0;
      width: 100%;
      text-align: center;
      display: block;
    }
    .uncollapsed {
      display: none;
    }
    &.collapsed .incollapsed {
      display: none;
    }
    &.collapsed .uncollapsed {
      display: block;
    }
  }
}

// Large screen styles
@media (min-width: $grid-breakpoint-lg) {
  .signup-landing-page-packages {
    .packages-price-list-small-screens {
      display: none;
    }
    .contact-us-callout-wrapper .contact-us-callout {
      float: right;
      margin: 0 0 -4px;
      min-width: 30%;
    }
    .packages-price-list {
      list-style-type: none;
      padding: 2 * $vertical-height 0;
      display: -webkit-box;
      display: -ms-flexbox;
      display: flex;
      -ms-flex-wrap: wrap;
      flex-wrap: wrap;
      text-align: center;
      flex-align: center;
      justify-content: space-between;
      li {
        // Make it a flex column
        width: 100%;
        -webkit-box-flex: 0;
        -ms-flex: 0 0 19%;
        flex: 0 0 19%;
        max-width: 19%;
        padding: 0;
      }
      h5 {
        color: $gray-light;
        font-style: italic;
      }
      h4 {
        color: #fff;
        padding: $vertical-height 0;
        background: #000;
        text-transform: none;
        margin: 0;
        font-size: 17px;
      }
      .btn-primary,
      .btn {
        margin-top: 2 * $vertical-height;
      }
      h3 {
        color: $compare-packages-blue;
        font-size: 50px;
        text-align: center;
        line-height: 1;
        margin: 0;
        span {
          font-size: 75%;
        }
      }
      p {
        font-style: italic;
        opacity: 0.9;
        margin: $vertical-height 0;
        line-height: 1.5;
      }
      section {
        display: block;
        background: #fff;
        border: 2px solid #000;
        padding: $vertical-height $vertical-height 2 * $vertical-height;
      }
    }

    table.compare-packages-table {
      display: table;
      th,
      td {
        border-right: 2px solid $compare-packages-table-border;
      }
      thead {
        h4,
        h3,
        a,
        p {
          text-align: center;
          margin: 0 0 0.5 * $vertical-height;
        }
        th {
          border-bottom: 2px solid $compare-packages-table-border;
          border-top: 2px solid $compare-packages-table-border;
          text-align: center;
          &:first-of-type {
            border-top-color: transparent;
            border-left-color: transparent;
          }
        }
        h4 {
          text-transform: none;
          line-height: 1.5;
        }
        h3 {
          font-size: 27px;
          line-height: 1.5;
        }
        p {
          font-size: 9px;
          line-height: 1.5;
          font-style: italic;
          line-height: 13px;
        }
      }
      tr {
        td:first-of-type {
          padding-top: 0;
          padding-bottom: 0;
          font-size: 14px;
          line-height: 1.5;
        }
        &:last-of-type {
          td {
            border-bottom: 2px solid $compare-packages-table-border;
          }
          td:first-of-type {
            border-bottom-color: transparent;
          }
        }
      }
      .most-popular-option {
        position: relative;
      }
      .most-popular-note {
        font-size: 12px;
        font-weight: 300;
        line-height: 1;
        position: absolute;
        width: 100%;
        left: 0;
        top: -21px;
        text-align: center;
        color: #fff;
        padding: 4px 0;
        background: #000;
      }
    }
  }
}

// Small screens styles
@media (max-width: $grid-breakpoint-lg - 1px) {
  .signup-landing-page-packages {
    // On small screens, we need to make sure the image always covers everything
    .banner-header {
      background-size: cover;
    }
  }
}

